# freediameter

./: .fossa.yml  PREREQUISITES
doc/single_host/: 01.pem  02.pem  cacert.pem  cakey.pem  peer1.csr.pem  peer1.key.pem  peer2.csr.pem  peer2.key.pem
doc/single_host/demoCA/: index.txt  index.txt.old
extensions/: CMakeLists.txt  fdbuild_conf.sh  fdbuild_make.sh  fddict_conf.sh  fddict_confall.sh  fddict_make.sh  fddict_makeall.sh
extensions/dict_3gpp2_avps/: 3gpp2_avps.did  CMakeLists.txt  dict_3gpp2_avps.c
extensions/dict_CreditControl/: CMakeLists.txt  CreditControl.did  dict_CreditControl.c
extensions/dict_CxDx/: CMakeLists.txt  CxDx.did  dict_CxDx.c
extensions/dict_Gx/: CMakeLists.txt  Gx.did  dict_Gx.c
extensions/dict_NAS/: CMakeLists.txt  NAS.did  dict_NAS.c
extensions/dict_Rf/: CMakeLists.txt  Rf.did  dict_Rf.c
extensions/dict_Ro/: CMakeLists.txt  Ro.did  dict_Ro.c
extensions/dict_Rx/: CMakeLists.txt  Rx.did  dict_Rx.c
extensions/dict_S6as6d/: CMakeLists.txt  S6as6d.did  dict_S6as6d.c
extensions/dict_S6c/: CMakeLists.txt  S6c.did  dict_S6c.c
extensions/dict_S6mS6n/: CMakeLists.txt  S6mS6n.did  dict_S6mS6n.c
extensions/dict_S6t/: CMakeLists.txt  S6t.did  dict_S6t.c
extensions/dict_S9/: CMakeLists.txt  S9.did  dict_S9.c
extensions/dict_SGd/: CMakeLists.txt  SGd.did  dict_SGd.c
extensions/dict_SLh/: CMakeLists.txt  SLh.did  dict_SLh.c
extensions/dict_SWm/: CMakeLists.txt  dict_SWm.c  dict_SWm.did
extensions/dict_Sd/: CMakeLists.txt  Sd.did  dict_Sd.c
extensions/dict_Sh/: CMakeLists.txt  Sh.did  dict_Sh.c
extensions/dict_St/: CMakeLists.txt  St.did  dict_St.c
extensions/dict_T4/: CMakeLists.txt  T4.did  dict_T4.c
extensions/dict_T6aT6bT7/: CMakeLists.txt  T6aT6bT7.did  dict_T6aT6bT7.c
extensions/dict_Tsp/: CMakeLists.txt  Tsp.did  dict_Tsp.c
extensions/dict_draftload_avps/: CMakeLists.txt  dict_draftload_avps.c  draftload_avps.did
extensions/dict_etsi283034_avps/: CMakeLists.txt  dict_etsi283034_avps.c  etsi283034_avps.did
extensions/dict_rfc4004_avps/: CMakeLists.txt  dict_rfc4004_avps.c  rfc4004_avps.did
extensions/dict_rfc4006bis_avps/: CMakeLists.txt  dict_rfc4006bis_avps.c  rfc4006bis_avps.did
extensions/dict_rfc4072_avps/: CMakeLists.txt  dict_rfc4072_avps.c  rfc4072_avps.did
extensions/dict_rfc4590_avps/: CMakeLists.txt  dict_rfc4590_avps.c  rfc4590_avps.did
extensions/dict_rfc5447_avps/: CMakeLists.txt  dict_rfc5447_avps.c  rfc5447_avps.did
extensions/dict_rfc5580_avps/: CMakeLists.txt  dict_rfc5580_avps.c  rfc5580_avps.did
extensions/dict_rfc5777_avps/: CMakeLists.txt  dict_rfc5777_avps.c  rfc5777_avps.did
extensions/dict_rfc5778_avps/: CMakeLists.txt  dict_rfc5778_avps.c  rfc5778_avps.did
extensions/dict_rfc6734_avps/: CMakeLists.txt  dict_rfc6734_avps.c  rfc6734_avps.did
extensions/dict_rfc6942_avps/: CMakeLists.txt  dict_rfc6942_avps.c  rfc6942_avps.did
extensions/dict_rfc7155_avps/: CMakeLists.txt  dict_rfc7155_avps.c  rfc7155_avps.did
extensions/dict_rfc7683_avps/: CMakeLists.txt  dict_rfc7683_avps.c  rfc7683_avps.did
extensions/dict_rfc7944_avps/: CMakeLists.txt  dict_rfc7944_avps.c  rfc7944_avps.did
extensions/dict_ts29061_avps/: CMakeLists.txt  dict_ts29061_avps.c  ts29061_avps.did
extensions/dict_ts29128_avps/: CMakeLists.txt  dict_ts29128_avps.c  ts29128_avps.did
extensions/dict_ts29154_avps/: CMakeLists.txt  dict_ts29154_avps.c  ts29154_avps.did
extensions/dict_ts29173_avps/: CMakeLists.txt  dict_ts29173_avps.c  ts29173_avps.did
extensions/dict_ts29212_avps/: CMakeLists.txt  dict_ts29212_avps.c  ts29212_avps.did
extensions/dict_ts29214_avps/: CMakeLists.txt  dict_ts29214_avps.c  ts29214_avps.did
extensions/dict_ts29215_avps/: CMakeLists.txt  dict_ts29215_avps.c  ts29215_avps.did
extensions/dict_ts29217_avps/: CMakeLists.txt  dict_ts29217_avps.c  ts29217_avps.did
extensions/dict_ts29229_avps/: CMakeLists.txt  dict_ts29229_avps.c  ts29229_avps.did
extensions/dict_ts29272_avps/: CMakeLists.txt  dict_ts29272_avps.c  ts29272_avps.did
extensions/dict_ts29273_avps/: CMakeLists.txt  dict_ts29273_avps.c  ts29273_avps.did
extensions/dict_ts29329_avps/: CMakeLists.txt  dict_ts29329_avps.c  ts29329_avps.did
extensions/dict_ts29336_avps/: CMakeLists.txt  dict_ts29336_avps.c  ts29336_avps.did
extensions/dict_ts29337_avps/: CMakeLists.txt  dict_ts29337_avps.c  ts29337_avps.did
extensions/dict_ts29338_avps/: CMakeLists.txt  dict_ts29338_avps.c  ts29338_avps.did
extensions/dict_ts29343_avps/: CMakeLists.txt  dict_ts29343_avps.c  ts29343_avps.did
extensions/dict_ts29344_avps/: CMakeLists.txt  dict_ts29344_avps.c  ts29344_avps.did
extensions/dict_ts29345_avps/: CMakeLists.txt  dict_ts29345_avps.c  ts29345_avps.did
extensions/dict_ts29368_avps/: CMakeLists.txt  dict_ts29368_avps.c  ts29368_avps.did
extensions/dict_ts29468_avps/: CMakeLists.txt  dict_ts29468_avps.c  ts29468_avps.did
extensions/dict_ts32299_avps/: CMakeLists.txt  dict_ts32299_avps.c  ts32299_avps.did
include/freeDiameter/: CMakeLists.txt  extension.h  libfdproto.h
libfdcore/: cnxctx.c  dict_base_proto.c  extensions.c
libfdproto/: CMakeLists.txt  dictionary.c  hashlist.cpp  log.c  messages.c
